# staticfilemap

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  tests.yml
src/: lib.rs
tests/: tests.rs
