[package]

authors = ["Christian Sdunek <me@systemcluster.me>"]
categories = ["filesystem", "compression", "no-std", "development-tools::build-utils"]
description = "Procedural macro to create a static map of compressed files during compilation"
edition = "2018"
include = [
  "Cargo.toml",
  "src/**/*",
  "LICENSE",
]
license-file = "LICENSE"
name = "staticfilemap"
readme = "README.md"
repository = "https://github.com/Systemcluster/staticfilemap"
version = "0.3.0"

[lib]

name = "staticfilemap"
path = "src/lib.rs"
proc-macro = true

[features]

default = ["lz4"]
lz4 = ["minilz4"]

[dependencies]

minilz4 = {version = "^0.5", optional = true}
zstd = {version = "^0.11", optional = true}

quote = "^1"
syn = {version = "^1", features = ["parsing"]}
