[package]

authors = ["Christian Sdunek <me@systemcluster.me>"]
categories = ["filesystem", "compression", "no-std", "development-tools::build-utils"]
description = "Procedural macro to create a static map of compressed files during compilation"
edition = "2021"
include = [
  "Cargo.toml",
  "src/**/*",
  "LICENSE",
]
license-file = "LICENSE"
name = "staticfilemap"
readme = "README.md"
repository = "https://github.com/Systemcluster/staticfilemap"
version = "0.4.1"

[lib]

name = "staticfilemap"
path = "src/lib.rs"
proc-macro = true

[features]

default = ["zstd"]
zstd = ["dep:zstd"]
lz4 = ["dep:minilz4"]
multithread = ["zstd?/zstdmt"]

[dependencies]

minilz4 = {version = "^0.6", optional = true}
zstd = {version = "^0.12", optional = true, default-features = false, features = ["arrays"]}

quote = "^1"
syn = {version = "^1", features = ["parsing"]}
